# SOS

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  build-default.sh  cfiles.txt  cglobals.txt  configure.ac  globals.txt  sandia-openshmem.spec.in  test
bindings/: Makefile.am  generate_bind_c11_extras.c  generate_bind_cxx_extras.cpp  shmem_bind_c.m4  shmem_bind_c11.m4  shmem_bind_c11_extras_none.m4  shmem_bind_cxx.m4  shmem_bind_cxx_extras_none.m4
mpp/: Makefile.am  contexts.h  pshmem.h  pshmem.h4  pshmem.h4.in  shmem-def.h.in  shmem-def.h4.in  shmem.fh.in  shmem.h  shmem.h.in  shmem.h4  shmem.h4.in  shmem_c_func.h4  shmem_c_func.h4.in  shmem_c_func.m4  shmemx-def.h  shmemx.fh.in  shmemx.h.in  shmemx.h4  shmemx.h4.in  shmemx_c_func.h4  shmemx_c_func.h4.in  shmemx_c_func.m4
pmi-simple/: Makefile.am  mpir_mem.h  mpl_sockaddr.c  pmi.h  simple_pmi.c  simple_pmiutil.c
shmem_pmi/: Makefile.am  README  autogen.sh  configure.ac  mpl.h  pmi.h  simple_pmi.c  simple_pmiutil.c  simple_pmiutil.h
src/: Makefile.am  accessibility.c  accessibility_c.c  accessibility_f.c  atomic.c  atomic_c.c  atomic_c.c4  atomic_c_pshmem.hin  atomic_f.c  atomic_nbi_c.c4  backtrace.c  backtrace.h  cache_management.c  cache_management_c.c  cache_management_f.c  collectives.c  collectives_c.c  collectives_c.c4  collectives_c_pshmem.hin  collectives_f.c  collectives_f.c4  config.h  contexts.c  contexts_c.c  data.c  data_c.c  data_c.c4  data_c_pshmem.hin  data_f.c  data_f.c4  init.c  init_c.c  init_f.c  lock.c  lock_c.c  lock_f.c  malloc.c  memory.c  op.h  perf_counters_c.c  (+73 more)
test/: Makefile.am  accessible_ping.c  atomic_inc.c  bigget.c  bigput.c  cswap.c  get1.c  get_g.c  ipgm.c  iput-iget.c  iput128.c  iput32.c  iput_float.c  iput_long.c  iput_longdouble.c  iput_short.c  max_reduction.c  max_to_all.c  min_to_all.c  msgrate.c  or_to_all.c  pa_to_all.c  pingpong-short.c  pingpong.c  put1.c  shmalloc.c  shmemalign.c  shmemlatency.c  shrealloc.c  spam.c  sping.c  strided_put.c  swap1.c  swapm.c  test_lock.c  to_all.c  waituntil.c
test/apps/: Makefile.am  binary-search.c  gups.c  mandelbrot.c
test/include/: Makefile.am
test/netpipe/: Makefile.am  netpipe.c  netpipe.h  shmem.c
test/performance/: Makefile.am  msgrate.c  netpipe.h  shmem.c  shmem_bw_put_perf.c  shmem_put_perf.c  shmemlatency.c
test/shmemx/: Makefile.am  atomic_nbi.c  c11_shmemx_team_collective_types.c  c11_shmemx_team_reduce.c  c11_test_shmemx_test.c  c11_test_shmemx_test_vector.c  c11_test_shmemx_wait_until.c  c11_test_shmemx_wait_until_vector.c  cxx_test_shmem_atomic_add.cpp  cxx_test_shmem_atomic_and.cpp  cxx_test_shmem_atomic_cswap.cpp  cxx_test_shmem_atomic_fetch.cpp  cxx_test_shmem_atomic_inc.cpp  cxx_test_shmem_atomic_or.cpp  cxx_test_shmem_atomic_set.cpp  cxx_test_shmem_atomic_swap.cpp  cxx_test_shmem_atomic_xor.cpp  cxx_test_shmem_put.cpp  cxx_test_shmem_test.cpp  cxx_test_shmem_wait_until.cpp  fadd_nbi.c  gettid_register.c  mt_perf_counter.c  perf_counter.c  put_signal.c  put_signal_nbi.c  shmem_ct.c  shmem_malloc_with_hints.c  shmemx_broadcast.c  shmemx_malloc_onepe.c  shmemx_malloc_varsize.c  shmemx_malloc_with_hints.c  shmemx_reduce.c  shmemx_space_alloc_team.c  shmemx_space_default.c  shmemx_team_alltoall.c  shmemx_team_alltoalls.c  shmemx_team_b2b_collectives.c  shmemx_team_broadcast.c  shmemx_team_collect.c  (+24 more)
test/spec-example/: Makefile.am  hybrid_mpi_mapping_id.c  hybrid_mpi_mapping_id_shmem_comm.c  shmem_ctx.c  shmem_ctx_pipelined_reduce.c  shmem_put_signal_example.c  shmem_reduce_example.c  shmem_session_example.c  shmem_team_alltoall.c  shmem_team_alltoalls.c  shmem_team_broadcast.c  shmem_team_collect.c  shmem_team_context.c  shmem_team_split_2D.c  shmem_team_split_strided.c  shmem_team_sync.c  shmem_team_translate.c  shmem_test_any.c  shmem_test_some.c  shmem_wait_until_all.c  shmem_wait_until_any.c  shmem_wait_until_any_vector.c  shmem_wait_until_some.c  shmemx_reduce.c  shmemx_team_alltoall.c  shmemx_team_broadcast.c  shmemx_team_collect.c  shmemx_team_sync.c  shmemx_team_translate.c  shmemx_test_all.c  shmemx_test_any.c  shmemx_test_some.c  shmemx_wait_until_all.c  shmemx_wait_until_any.c  shmemx_wait_until_any_vector.c  shmemx_wait_until_some.c
test/unit/: Makefile.am  accessible_ping.c  alltoall.c  alltoalls.c  asym_alloc.c  atomic_bitwise.c  atomic_inc.c  atomic_nbi.c  barrier.c  bcast.c  bcast_flood.c  bcast_in_place.c  big_reduction.c  bigget.c  bigput.c  broadcast_active_set.c  c11_shmem_team_collective_types.c  c11_shmem_team_reduce.c  c11_shmem_test_all_any_some.c  c11_shmem_test_vector.c  c11_shmem_wait_until_all_any_some.c  c11_test_shmem_add.c  c11_test_shmem_atomic_add.c  c11_test_shmem_atomic_and.c  c11_test_shmem_atomic_cswap.c  c11_test_shmem_atomic_fetch.c  c11_test_shmem_atomic_fetch_and.c  c11_test_shmem_atomic_fetch_or.c  c11_test_shmem_atomic_fetch_xor.c  c11_test_shmem_atomic_inc.c  c11_test_shmem_atomic_or.c  c11_test_shmem_atomic_set.c  c11_test_shmem_atomic_swap.c  c11_test_shmem_atomic_xor.c  c11_test_shmem_fetch.c  c11_test_shmem_g.c  c11_test_shmem_get.c  c11_test_shmem_inc.c  c11_test_shmem_p.c  c11_test_shmem_put.c  (+140 more)
trunk/: Makefile.am  NEWS  README  configure.ac
trunk/config/: fortran_get_kind_value.m4  fortran_get_sizeof.m4  ompi_check_portals4.m4  ompi_find_type.m4  opal_case_sensitive_fs_setup.m4  sandia_check_xpmem.m4
trunk/mpp/: Makefile.am  pshmem.h  shmem.fh  shmem.fh.in  shmem.h  shmem.h.in
trunk/src/: Makefile.am  accessibility.c  atomic.c  atomic_f.c  cache_management.c  cache_management_f.c  collectives.c  collectives_c.c  collectives_f.c  data.c  data_c.c  data_f.c  init.c  init_c.c  init_f.c  lock.c  lock_c.c  malloc.c  query.c  query_c.c  query_f.c  remote_pointer.c  remote_pointer_c.c  remote_pointer_f.c  runtime-mpi.c  runtime-pmi.c  runtime-shmemrt.c  runtime.c  runtime.h  shmem_atomic.h  shmem_collectives.h  shmem_comm.h  shmem_compiler_script.in  shmem_free_list.c  shmem_free_list.h  shmem_internal.h  shmem_lock.h  shmem_remote_pointer.h  shmem_synchronization.h  symmetric_heap.c  (+10 more)
trunk/test/: Makefile.am  (+41 more)
(+711 files in other folders)
