# -*- Makefile -*-
#
# Copyright 2011 Sandia Corporation. Under the terms of Contract
# DE-AC04-94AL85000 with Sandia Corporation, the U.S.  Government
# retains certain rights in this software.
# 
# This file is part of the Sandia OpenSHMEM software package. For license
# information, see the LICENSE file in the top level directory of the
# distribution.
#

ACLOCAL_AMFLAGS = -I config

EXTRA_DIST = README NEWS LICENSE shmem_pmi sandia-openshmem.spec

SUBDIRS = mpp $(SHMEM_PMI) src test
